[gd_scene load_steps=16 format=3 uid="uid://ycmi7iov5vux"]

[ext_resource type="Script" uid="uid://c31mvqjd7uvqq" path="res://ui/level/score_menu.gd" id="1_xv7ky"]
[ext_resource type="Theme" uid="uid://bdukti3wo6tch" path="res://assets/themes/ui_menu_theme.tres" id="2_7kfo8"]
[ext_resource type="PackedScene" uid="uid://b8oc3p24hynli" path="res://audio/sfx/ui_sfx.tscn" id="2_774fn"]
[ext_resource type="AudioStream" uid="uid://c2tbhdh18n6xw" path="res://assets/audio/sfx/victory jingle.wav" id="2_byrfs"]
[ext_resource type="AudioStream" uid="uid://4hafjcv3yjnv" path="res://assets/audio/sfx/failure jingle.wav" id="2_pt324"]
[ext_resource type="PackedScene" uid="uid://ct5fwjfyxld6l" path="res://systems/profile_camera.tscn" id="2_vc7if"]
[ext_resource type="FontFile" uid="uid://b354cldnji4jc" path="res://assets/fonts/Quantico/Quantico-BoldItalic.ttf" id="3_d4see"]
[ext_resource type="Texture2D" uid="uid://u8n1xa6owmfe" path="res://assets/images/menu_bg_2.png" id="3_j7vjx"]
[ext_resource type="Texture2D" uid="uid://wgo82sgwp2xd" path="res://assets/images/button2_normal.png" id="6_2rw0f"]
[ext_resource type="PackedScene" uid="uid://2pn552x78q4r" path="res://ui/level/ui_button.tscn" id="7_byrfs"]
[ext_resource type="Texture2D" uid="uid://gw7yomaus17k" path="res://assets/images/button2_press.png" id="7_j7vjx"]
[ext_resource type="Texture2D" uid="uid://dhtqrvuqevy7f" path="res://assets/images/button2_hover.png" id="8_byrfs"]

[sub_resource type="Animation" id="Animation_7kfo8"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(1225, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(-600, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_xv7ky"]
resource_name = "open"
length = 0.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(1225, 0, 0, 0.2, -9.6073, 0, -0.1, 3.7716064, 0, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(-600, 0, 0, 0.2, 4.5183105, 0, -0.1, 3.7716064, 0, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d4see"]
_data = {
&"RESET": SubResource("Animation_7kfo8"),
&"open": SubResource("Animation_xv7ky")
}

[node name="ScoreMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_xv7ky")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d4see")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="FailureSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pt324")
bus = &"Music"

[node name="VictorySfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_byrfs")
bus = &"Music"

[node name="UISFX" parent="." instance=ExtResource("2_774fn")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1225.0
offset_top = -600.0
offset_right = 1225.0
offset_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("3_j7vjx")
flip_h = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -183.0
offset_right = 448.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="MarginContainer/Panel/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(868, 432)
render_target_update_mode = 4

[node name="ProfileCamera" parent="MarginContainer/Panel/SubViewportContainer/SubViewport" instance=ExtResource("2_vc7if")]
unique_name_in_owner = true

[node name="Label" type="Label" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -401.5
offset_top = 113.0
offset_right = 401.5
offset_bottom = 252.0
grow_horizontal = 2
theme = ExtResource("2_7kfo8")
theme_override_colors/font_color = Color(0.87492, 0.8556, 0.92, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_d4see")
theme_override_font_sizes/font_size = 96
text = "FINAL SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -591.0
offset_top = -91.0
offset_right = -156.0
offset_bottom = 188.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 48
alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
split_offset = 180

[node name="NameLbl" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
theme = ExtResource("2_7kfo8")
theme_override_colors/font_color = Color(0.31764707, 0.972549, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "DAMAGE"

[node name="DamageLbl" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2_7kfo8")
theme_override_colors/font_color = Color(0.31764707, 0.972549, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "00000"

[node name="HSplitContainer2" type="HSplitContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
split_offset = 180

[node name="NameLbl" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HSplitContainer2"]
layout_mode = 2
theme = ExtResource("2_7kfo8")
theme_override_colors/font_color = Color(0.31764707, 0.972549, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "TIME"

[node name="TimeLbl" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HSplitContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2_7kfo8")
theme_override_colors/font_color = Color(0.31764707, 0.972549, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "000.00"

[node name="HSplitContainer3" type="HSplitContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
split_offset = 180

[node name="NameLbl" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HSplitContainer3"]
layout_mode = 2
theme = ExtResource("2_7kfo8")
theme_override_colors/font_color = Color(0.31764707, 0.972549, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "TOTAL"

[node name="TotalLbl" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HSplitContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2_7kfo8")
theme_override_colors/font_color = Color(0.31764707, 0.972549, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "000.00"

[node name="PassPanel" type="ColorRect" parent="MarginContainer/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.66504
offset_top = -52.33203
offset_right = 285.66504
offset_bottom = 178.33203
grow_horizontal = 2
grow_vertical = 2
rotation = -0.20943952
color = Color(0.101960786, 0.75686276, 1, 0.3529412)

[node name="Label" type="Label" parent="MarginContainer/Panel/PassPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7kfo8")
theme_override_colors/font_color = Color(0.7, 0.93000007, 1, 1)
theme_override_font_sizes/font_size = 142
text = "PASS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FailPanel" type="ColorRect" parent="MarginContainer/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.66504
offset_top = -52.33203
offset_right = 285.66504
offset_bottom = 178.33203
grow_horizontal = 2
grow_vertical = 2
rotation = -0.20943952
color = Color(0.94, 0.0564, 0.0564, 0.54901963)

[node name="Label" type="Label" parent="MarginContainer/Panel/FailPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7kfo8")
theme_override_colors/font_color = Color(0.14132491, 2.1538512e-05, 0.15081763, 1)
theme_override_font_sizes/font_size = 142
text = "FAIL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -196.0
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 48
alignment = 1

[node name="ReplayBtn" parent="MarginContainer/Panel/ButtonContainer" instance=ExtResource("7_byrfs")]
layout_mode = 2
texture_normal = ExtResource("6_2rw0f")
texture_pressed = ExtResource("7_j7vjx")
texture_focused = ExtResource("8_byrfs")
label = "REPLAY"

[node name="MenuBtn" parent="MarginContainer/Panel/ButtonContainer" instance=ExtResource("7_byrfs")]
layout_mode = 2
texture_normal = ExtResource("6_2rw0f")
texture_pressed = ExtResource("7_j7vjx")
texture_focused = ExtResource("8_byrfs")
label = "MENU"

[node name="NextBtn" parent="MarginContainer/Panel/ButtonContainer" instance=ExtResource("7_byrfs")]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("6_2rw0f")
texture_pressed = ExtResource("7_j7vjx")
texture_focused = ExtResource("8_byrfs")
label = "NEXT"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="MarginContainer/Panel/ButtonContainer/ReplayBtn" to="." method="_on_replay_btn_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/ButtonContainer/MenuBtn" to="." method="_on_menu_btn_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/ButtonContainer/NextBtn" to="." method="_on_next_btn_pressed"]
